package org.philomagi.ticket_modeling
package domain.theater

object Theater {
  import utils.TaggedType.*

  type Id = String @@ "TheaterId"
}
